test/bad/multisym.fnl
(local x 1)

(print x:b)
